--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ nav button:hover{
   border-radius: 30px;
   padding: 20px;
 }
-/* .icon i{
+.icon i{
   font-size: 20px;
   color: #777;
 }
@@ -135,7 +135,7 @@ nav button:hover{
   margin-left: 20px;
    border: none;
   outline: none; 
-} */
+}
 
 .bar {
   background-color: white;
@@ -166,7 +166,6 @@ nav button:hover{
 .booking-list {
   display: flex;
   justify-content: center;
-  margin-top: 5px;
   gap: 20px;
   margin-top: 30px;
 }
@@ -246,12 +245,30 @@ nav button:hover{
   font-size: 17px;
 }
 #list {
-  display: flex;
-  margin-bottom: 5px;
+ display: flex;
+  justify-content: space-between;
+  margin-left: 20px;
+  border-radius: 7px;
+  padding: 2px;
+}
+#list h4{
+  font-size: 14px;
+  text-align: left;
 }
 #list img {
   width: 15px;
   height: 15px;
+}
+#list p{
+   font-size: 15px;
+  margin-left: 50px;
+}
+.list button{
+  width: 220px;
+  height: 30px;
+  background-color: #4457ff;
+  color: #fff;
+  border: none;
 }
 .line {
   text-align: center;
@@ -357,11 +374,69 @@ font-size: 40px;
 .foot_note p {
   margin-top: 20px;
 }
-@media (max-width:1920px) {
-  .search-bar{
-margin-left: 50px;
+@media (max-width:912px) {
+  .bar button:last-child{
+margin-left: 10em;
   }
-  nav ul li a{
-    margin-left: 1000px;
+  .booking-list {
+    gap: 7px;
   }
+ .card p{
+  font-size: 15px;
+ }
+}
+@media (max-width:820px) {
+.bar button:last-child{
+    margin-left: 2rem;
+   }
+    .booking-list{
+    flex-direction: column;
+     gap: 10px;
+   }
+}
+@media (max-width:768px) {
+   .bar button:last-child{
+    margin-left: 3rem;
+   }
+   .booking-list{
+    flex-direction: column;
+     gap: 10px;
+   }
+}
+@media (max-width:412px) {
+  #head{
+    width: 2px;
+  }
+  .card p{
+  font-size: 10px;
+  line-height: 10px;
+  margin: 13px;
+ }
+ .bar button:last-child{
+    margin-left: 1rem;
+   }
+   .booking-list{
+    flex-direction: column;
+     gap: 10px;
+   }
+   .body3{
+    flex-direction: column;
+   }
+   .bar input {
+  height: 20px;
+}
+.icon{
+  width: 300px;
+}
+.code p{
+  word-spacing: 5px;
+  font-size: 20px;
+  margin-left: 10px;
+
+}
+}
+@media (max-width:414px) {
+   .body3{
+    flex-direction: column;
+   }
 }
